0424-0113 Admin 전부 올림

--- a/src/main/webapp/resources/assets/js/admin/smarteditor2-master/workspace/docs/user_guide/3_customizing/plugins/01.md
+++ b/src/main/webapp/resources/assets/js/admin/smarteditor2-master/workspace/docs/user_guide/3_customizing/plugins/01.md
@@ -6,7 +6,7 @@
 
 툴바에 삽입할 버튼으로 사용할 이미지 파일(21 x 21 px의 PNG 파일)은 /img 폴더에 저장한다. 해당 버튼 이미지를 사용하도록 다음과 같은 내용을 /css/smart_editor2.css 파일에 추가한다.
 ```
-#smart_editor2 .se2_text_tool .se2_clock { background:url("resources/assets/images/admin/clock.png") no-repeat };
+#smart_editor2 .se2_text_tool .se2_clock { background:url("../img/clock.png") no-repeat };
 ```
 
 툴바 버튼을 삽입하는 코드를 작성한다. 다른 SmartEditor2 플러그인으로 사용하려면 다음과 같은 마크업 규칙을 준수해야 한다.
